add final predicted

--- a/final/get-result.ipynb
+++ b/final/get-result.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,19 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load images from folders A and B\n",
-    "folder_A = 'testval/A'\n",
-    "folder_B = 'testval/B'\n",
-    "folder_label = 'testval/label'"
+    "folder_A = 'test/A'\n",
+    "folder_B = 'test/B'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,20 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "images_B = load_images_from_folder(folder_B, is_gray=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = load_images_from_folder(folder_label, is_gray = False)"
+    "images_B = load_images_from_folder(folder_B, is_gray=False)"
    ]
   },
   {
@@ -119,12 +109,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1200 1200 1200\n"
+      "608 608\n"
      ]
     }
    ],
    "source": [
-    "print(len(images_A), len(images_B), len(labels)) "
+    "print(len(images_A), len(images_B)) "
    ]
   },
   {
@@ -146,22 +136,22 @@
    "outputs": [],
    "source": [
     "class ChangeDetectionDataset(Dataset):\n",
-    "    def __init__(self, images_A, images_B, labels):\n",
+    "    def __init__(self, images_A, images_B):\n",
     "        self.images_A = images_A\n",
     "        self.images_B = images_B\n",
-    "        self.labels = labels\n",
+    "        \n",
     "#         self.transform = transform\n",
     "\n",
     "    def __len__(self):\n",
-    "        return len(self.labels)\n",
+    "        return len(self.images_A)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
     "        image_A = torch.tensor(self.images_A[idx], dtype=torch.float32).permute(2, 0, 1) / 255\n",
     "        image_B = torch.tensor(self.images_B[idx], dtype=torch.float32).permute(2, 0, 1) / 255\n",
-    "        label = torch.tensor(self.labels[idx], dtype=torch.float32) / 255\n",
+    "        \n",
     "\n",
     "\n",
-    "        return image_A, image_B, label"
+    "        return image_A, image_B"
    ]
   },
   {
@@ -335,26 +325,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def load_checkpoint(filepath):\n",
-    "#     checkpoint = torch.load(filepath)\n",
-    "#     model = checkpoint['model']\n",
-    "#     model.load_state_dict(checkpoint['state_dict'])\n",
-    "#     for parameter in model.parameters():\n",
-    "#         parameter.requires_grad = False\n",
-    "#     model = model.to(device)\n",
-    "#     model.eval()\n",
-    "#     return model\n",
-    "\n",
-    "# model = load_checkpoint('checkpoint_2.pth')\n",
-    "# print(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +768,7 @@
        ")"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,14 +784,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "3\n"
      ]
     }
    ],
@@ -833,55 +803,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getImageName(number):\n",
     "    numberStr = str(number)\n",
-    "    while(len(numberStr) < num_of_digits):\n",
+    "    while(len(numberStr) < 4):\n",
     "        numberStr = '0'+numberStr\n",
     "    \n",
-    "    numberStr = 'predicted/'+numberStr+'.png'\n",
+    "    numberStr = 'final-predicted/'+numberStr+'.png'\n",
     "    return numberStr    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/75 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "256 256\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 75/75 [00:44<00:00,  1.67it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation Jaccard Index : 0.4969266234190536 | Jaccard Avg : 0.8744428411173835 | sklearnWay : 0.8744428411173835 \n"
+      "100%|██████████| 38/38 [00:14<00:00,  2.62it/s]\n"
      ]
     }
    ],
    "source": [
-    "dataset = ChangeDetectionDataset(images_A, images_B, labels)\n",
+    "dataset = ChangeDetectionDataset(images_A, images_B)\n",
     "data_loader = DataLoader(dataset, batch_size=16)\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "val_total_intersections = 0\n",
@@ -891,34 +840,44 @@
     "    jaccardArr = []\n",
     "    skArr = []\n",
     "    counter = 0\n",
-    "    for a, b, l in tqdm(data_loader):\n",
-    "        a, b, l = a.to(device), b.to(device), l.to(device)\n",
+    "    for a, b in tqdm(data_loader):\n",
+    "        a, b = a.to(device), b.to(device)\n",
     "        outputs = model(a,b)\n",
-    "        outputs = outputs.reshape((-1,l.shape[1],l.shape[2]))\n",
+    "        outputs = outputs.reshape((-1,256,256))\n",
     "        outputs_binary = (outputs>0.5) * 1\n",
-    "        if counter == 0:\n",
-    "            print(l.shape[1],l.shape[2])   \n",
-    "        val_total_intersections += np.logical_and(outputs_binary.cpu().numpy(), l.cpu().numpy()).sum()\n",
-    "        val_total_unions += np.logical_or(outputs_binary.cpu().numpy(), l.cpu().numpy()).sum()\n",
+    "           \n",
+    "       \n",
     "        for i in range(len(outputs_binary)):\n",
     "            ###############################################################\n",
-    "            \n",
     "            \n",
     "            plt.imsave(getImageName(counter), outputs_binary[i].cpu().numpy(), cmap='gray')\n",
     "            counter += 1\n",
     "            \n",
     "            ###############################################################\n",
-    "            skArr.append(jaccard_score(outputs_binary[i].cpu().numpy().flatten(), l[i].cpu().numpy().flatten(), average='binary', zero_division=1))\n",
-    "            intersection = np.logical_and(outputs_binary[i].cpu().numpy(), l[i].cpu().numpy()).sum()\n",
-    "            union = np.logical_or(outputs_binary[i].cpu().numpy(), l[i].cpu().numpy()).sum()\n",
-    "            if union != 0:\n",
-    "                jaccardArr.append((intersection)/(union))\n",
-    "            else:\n",
-    "                jaccardArr.append(1)\n",
-    "val_jaccard = val_total_intersections / val_total_unions\n",
-    "secondWay = np.array(jaccardArr).mean()\n",
-    "sklearnWay = np.array(skArr).mean()\n",
-    "print(f'Validation Jaccard Index : {val_jaccard} | Jaccard Avg : {secondWay} | sklearnWay : {sklearnWay} ')"
+    "            \n",
+    "            # fig, axes = plt.subplots(1, 3, figsize=(12, 4))\n",
+    "            # # Plot the first image\n",
+    "            # axes[0].imshow(a[i].cpu().permute(1, 2, 0).numpy())\n",
+    "            # axes[0].set_title('Image A')\n",
+    "\n",
+    "            # # Plot the second image\n",
+    "            # axes[1].imshow(b[i].cpu().permute(1, 2, 0).numpy())\n",
+    "            # axes[1].set_title('Image B')\n",
+    "\n",
+    "            # axes[2].imshow(outputs_binary[i].cpu().reshape(256,256), cmap='gray')\n",
+    "            # axes[2].set_title('Predicted')\n",
+    "\n",
+    "            # # Remove the axis labels\n",
+    "            # for ax in axes:\n",
+    "            #     ax.axis('off')\n",
+    "\n",
+    "            # # Adjust the spacing between subplots\n",
+    "            # plt.tight_layout()\n",
+    "\n",
+    "            # # Show the plot\n",
+    "            # plt.show()\n",
+    "            \n",
+    "  "
    ]
   },
   {
