--- a/final/get-result.ipynb
+++ b/final/get-result.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        ")"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,20 +812,82 @@
     "    while(len(numberStr) < 4):\n",
     "        numberStr = '0'+numberStr\n",
     "    \n",
-    "    numberStr = 'final-predicted/'+numberStr+'.png'\n",
+    "    numberStr = 'final-predicted_255/'+numberStr+'.png'\n",
     "    return numberStr    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 38/38 [00:14<00:00,  2.62it/s]\n"
+      " 97%|█████████▋| 37/38 [00:09<00:00,  4.16it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[  0   0   0 ... 255   0   0]\n",
+      "  [  0   0   0 ... 255 255   0]\n",
+      "  [  0   0   0 ... 255   0   0]\n",
+      "  ...\n",
+      "  [  0   0   0 ...   0   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]]\n",
+      "\n",
+      " [[  0   0   0 ...   0   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]\n",
+      "  ...\n",
+      "  [  0   0   0 ...   0   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]]\n",
+      "\n",
+      " [[  0   0   0 ... 255 255   0]\n",
+      "  [255 255   0 ... 255 255 255]\n",
+      "  [255 255   0 ... 255 255 255]\n",
+      "  ...\n",
+      "  [  0   0   0 ... 255   0   0]\n",
+      "  [  0   0   0 ... 255   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[  0   0   0 ...   0   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]\n",
+      "  ...\n",
+      "  [  0   0   0 ... 255 255 255]\n",
+      "  [  0   0   0 ... 255 255 255]\n",
+      "  [  0   0   0 ... 255 255   0]]\n",
+      "\n",
+      " [[  0   0   0 ...   0   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]\n",
+      "  ...\n",
+      "  [  0   0   0 ... 255 255 255]\n",
+      "  [  0   0   0 ... 255 255   0]\n",
+      "  [  0   0   0 ... 255   0   0]]\n",
+      "\n",
+      " [[  0 255 255 ...   0   0   0]\n",
+      "  [255 255 255 ...   0   0   0]\n",
+      "  [255 255 255 ...   0   0   0]\n",
+      "  ...\n",
+      "  [  0   0   0 ...   0   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]\n",
+      "  [  0   0   0 ...   0   0   0]]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 38/38 [00:09<00:00,  4.00it/s]\n"
      ]
     }
    ],
@@ -844,10 +906,11 @@
     "        a, b = a.to(device), b.to(device)\n",
     "        outputs = model(a,b)\n",
     "        outputs = outputs.reshape((-1,256,256))\n",
-    "        outputs_binary = (outputs>0.5) * 1\n",
+    "        outputs_binary = (outputs>0.5) * 255\n",
     "           \n",
     "       \n",
     "        for i in range(len(outputs_binary)):\n",
+    "           \n",
     "            ###############################################################\n",
     "            \n",
     "            plt.imsave(getImageName(counter), outputs_binary[i].cpu().numpy(), cmap='gray')\n",
